--- a/sample.html
+++ b/sample.html
@@ -535,13 +535,20 @@
                         <div class="form-group">
                             <div class="btn-toolbar">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default" onclick="sendUsbData()">Send Raw Data</button>
-                                    <button type="button" class="btn btn-default" onclick="readUsbData()">Read Raw Data</button>
+                                    <button type="button" class="btn btn-default" onclick="sendUsbData()">Send Data</button>
+                                    <button type="button" class="btn btn-default" onclick="readUsbData()">Read Data</button>
                                 </div>
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-default" onclick="openUsbStream()">Open Stream</button>
                                     <button type="button" class="btn btn-default" onclick="closeUsbStream()">Close Stream</button>
-                                    <button type="button" class="btn btn-default scaleToggle" onclick="toggleScale()">Read as Weight</button>
+                                </div>
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label id="usbRawRadio" class="btn btn-default active">
+                                        <input type="radio" autocomplete="off" checked>Raw
+                                    </label>
+                                    <label id="usbWeightRadio" class="btn btn-default">
+                                        <input type="radio" autocomplete="off">Weight
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -631,13 +638,20 @@
                         <div class="form-group">
                             <div class="btn-toolbar">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-default" onclick="sendHidData()">Send Raw Data</button>
-                                    <button type="button" class="btn btn-default" onclick="readHidData()">Read Raw Data</button>
+                                    <button type="button" class="btn btn-default" onclick="sendHidData()">Send Data</button>
+                                    <button type="button" class="btn btn-default" onclick="readHidData()">Read Data</button>
                                 </div>
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-default" onclick="openHidStream()">Open Stream</button>
                                     <button type="button" class="btn btn-default" onclick="closeHidStream()">Close Stream</button>
-                                    <button type="button" class="btn btn-default scaleToggle" onclick="toggleScale()">Read as Weight</button>
+                                </div>
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label id="hidRawRadio" class="btn btn-default active">
+                                        <input type="radio" autocomplete="off" checked>Raw
+                                    </label>
+                                    <label id="hidWeightRadio" class="btn btn-default">
+                                        <input type="radio" autocomplete="off">Weight
+                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -1279,7 +1293,7 @@
 
     function readUsbData() {
         qz.usb.readData($("#usbVendor").val(), $("#usbProduct").val(), $("#usbEndpoint").val(), $("#usbResponse").val()).then(function(data) {
-            displayMessage("<strong>Raw response:</strong> " + data + "<br/>");
+            displayMessage("<strong>Response:</strong> " + (window.readingWeight ? readScaleData(data) : data) + "<br/>");
         }).catch(displayError);
     }
 
@@ -1346,7 +1360,7 @@
 
     function readHidData() {
         qz.hid.readData($("#hidVendor").val(), $("#hidProduct").val(), $("#hidResponse").val()).then(function(data) {
-            displayMessage("<strong>Raw response:</strong> " + data + "<br/>");
+            displayMessage("<strong>Response:</strong> " + (window.readingWeight ? readScaleData(data) : data) + "<br/>");
         }).catch(displayError);
     }
 
@@ -1485,6 +1499,21 @@
                 return false;
             }
         });
+
+        $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+            if (window.readingWeight) {
+                $("#usbWeightRadio").click();
+                $("#hidWeightRadio").click();
+            } else {
+                $("#usbRawRadio").click();
+                $("#hidRawRadio").click();
+            }
+        });
+
+        $("#usbRawRadio").click(function() { window.readingWeight = false; });
+        $("#usbWeightRadio").click(function() { window.readingWeight = true; });
+        $("#hidRawRadio").click(function() { window.readingWeight = false; });
+        $("#hidWeightRadio").click(function() { window.readingWeight = true; });
 
         $("[data-toggle='tooltip']").tooltip();
     });
@@ -1645,7 +1674,7 @@
         return '<button class="btn btn-default btn-xs" onclick="' + click + '" data-dismiss="alert">Use This</button>';
     }
 
-    function serialButton (serialPort, data) {
+    function serialButton(serialPort, data) {
         var click = "";
         for(var i = 0; i < serialPort.length; i++ ) {
             click += "$('#" + serialPort[i] + "').val('" + data[i] + "');$('#" + serialPort[i] + "').fadeOut(300).fadeIn(500);";
@@ -1663,17 +1692,6 @@
 
         $input.val(val.toLowerCase());
     }
-
-    function toggleScale() {
-        window.readingWeight = !readingWeight;
-
-        if (readingWeight) {
-            $(".scaleToggle").html("Read as Raw");
-        } else {
-            $(".scaleToggle").html("Read as Weight");
-        }
-    }
-
 
     /** Attempts to parse scale reading from USB raw output */
     function readScaleData(data) {
