--- a/sample.html
+++ b/sample.html
@@ -1295,8 +1295,6 @@
             case 'EPL':
                 printData = [
                     '\nN\n',
-                    'q609\n',
-                    'Q203,26\n',
                     { type: 'raw', format: 'image', flavor: 'file', data: 'assets/img/image_sample_bw.png', options: opts },
                     '\nP1,1\n'
                 ];
@@ -1305,7 +1303,6 @@
                 printData = [
                     '^XA\n',
                     { type: 'raw', format: 'image', flavor: 'file', data: 'assets/img/image_sample_bw.png', options: opts },
-                    '^FS\n',
                     '^XZ\n'
                 ];
                 break;
@@ -1342,7 +1339,6 @@
                 printData = [
                     '^XA\n',
                     { type: 'raw', format: 'pdf', flavor: 'file', data: 'assets/pdf_sample.pdf', options: opts },
-                    '^FS\n',
                     '^XZ\n'
                 ];
                 break;
@@ -1378,7 +1374,6 @@
                 printData = [
                     '^XA\n',
                     { type: 'raw', format: 'html', flavor: 'file', data: 'https://qz.io/about/', options: opts },
-                    '^FS\n',
                     '^XZ\n'
                 ];
                 break;
@@ -1438,10 +1433,10 @@
 
     function printPDF() {
         var config = getUpdatedConfig();
-        //print options not used with this flavor
+        var opts = getUpdatedOptions(true);
 
         var printData = [
-            { type: 'pixel', format: 'pdf', flavor: 'file', data: 'assets/pdf_sample.pdf' }
+            { type: 'pixel', format: 'pdf', flavor: 'file', data: 'assets/pdf_sample.pdf', options: opts }
         ];
 
         qz.print(config, printData).catch(displayError);
