--- a/sample.html
+++ b/sample.html
@@ -268,11 +268,11 @@
                                                 <input type="text" id="pXml" class="form-control pull-right" />
                                             </div>
                                             <div class="form-group form-inline">
-                                                <label for="pRawWidth" class="tip" data-toggle="tooltip" title="In pixels">HTML Page Width</label>
+                                                <label for="pRawWidth" class="tip" data-toggle="tooltip" title="In pixels">Render Width</label>
                                                 <input type="number" id="pRawWidth" class="form-control pull-right" />
                                             </div>
                                             <div class="form-group form-inline">
-                                                <label for="pRawHeight" class="tip" data-toggle="tooltip" title="In pixels">HTML Page Height</label>
+                                                <label for="pRawHeight" class="tip" data-toggle="tooltip" title="In pixels">Render Height</label>
                                                 <input type="number" id="pRawHeight" class="form-control pull-right" />
                                             </div>
                                         </div>
@@ -491,16 +491,16 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group form-inline">
-                                                <label for="pPxlWidth" class="tip" data-toggle="tooltip" title="In relation to units specified">HTML Page
-                                                    Width
+                                                <label for="pPxlWidth" class="tip" data-toggle="tooltip" title="In relation to units specified">
+                                                    Render Width
                                                 </label>
                                                 <input type="number" id="pPxlWidth" class="form-control pull-right" />
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group form-inline">
-                                                <label for="pPxlHeight" class="tip" data-toggle="tooltip" title="In relation to units specified">HTML Page
-                                                    Height
+                                                <label for="pPxlHeight" class="tip" data-toggle="tooltip" title="In relation to units specified">
+                                                    Render Height
                                                 </label>
                                                 <input type="number" id="pPxlHeight" class="form-control pull-right" />
                                             </div>
