--- a/sample.html
+++ b/sample.html
@@ -232,16 +232,16 @@
                                                 <div>
                                                     <label>
                                                         <input type="radio" name="pLanguage" id="pLangEPL" value="EPL" />
-                                                        EPL / EPL2
+                                                        EPL2
                                                     </label>
                                                     <label>
                                                         <input type="radio" name="pLanguage" id="pLangZPL" value="ZPL" />
-                                                        ZPL / ZPL2
+                                                        ZPLII
                                                     </label>
                                                     <br />
                                                     <label>
                                                         <input type="radio" name="pLanguage" id="pLangESCP" value="ESCP" />
-                                                        ESCP / ESCP2
+                                                        ESCP
                                                     </label>
                                                     <label>
                                                         <input type="radio" name="pLanguage" id="pLangEPCL" value="EPCL" />
@@ -1657,8 +1657,8 @@
 
         //printer
         $("#pLangEPL").prop('checked', true);
-        $("#pX").val('150');
-        $("#pY").val('180');
+        $("#pX").val('0');
+        $("#pY").val('0');
         $("#pDotDensity").val('single');
         $("#pXml").val('v7:Image');
         $("#pRawWidth").val('480');
