Adjust sample + force pdf scale with size

--- a/sample.html
+++ b/sample.html
@@ -232,11 +232,11 @@
                                                 <div>
                                                     <label>
                                                         <input type="radio" name="pLanguage" id="pLangEPL" value="EPL" />
-                                                        EPL / EPL2
+                                                        EPL2
                                                     </label>
                                                     <label>
                                                         <input type="radio" name="pLanguage" id="pLangZPL" value="ZPL" />
-                                                        ZPL / ZPL2
+                                                        ZPLII
                                                     </label>
                                                     <br />
                                                     <label>
@@ -1768,8 +1768,8 @@
 
         //printer
         $("#pLangEPL").prop('checked', true);
-        $("#pX").val('150');
-        $("#pY").val('180');
+        $("#pX").val('0');
+        $("#pY").val('0');
         $("#pDotDensity").val('single');
         $("#pXml").val('v7:Image');
         $("#pRawWidth").val('480');
