Fix serial start typo

--- a/sample.html
+++ b/sample.html
@@ -459,8 +459,8 @@
                                         </div>
 
                                         <div class="form-group form-inline">
-                                            <label for="serialBegin">Response Start</label>
-                                            <input type="text" id="serialBegin" class="form-control pull-right" />
+                                            <label for="serialStart">Response Start</label>
+                                            <input type="text" id="serialStart" class="form-control pull-right" />
                                         </div>
 
                                         <div class="form-group form-inline">
@@ -1209,7 +1209,7 @@
         if (!widthVal) { widthVal = null; }
 
         var bounds = {
-            begin: $("#serialBegin").val(),
+            start: $("#serialStart").val(),
             end: $("#serialEnd").val(),
             width: widthVal
         };
@@ -1456,7 +1456,7 @@
     function resetSerialOptions() {
         $("#serialPort").val('');
         $("#serialCmd").val('');
-        $("#serialBegin").val("0x0002"); //String.fromCharCode(2)
+        $("#serialStart").val("0x0002"); //String.fromCharCode(2)
         $("#serialEnd").val("0x000D"); //String.fromCharCode(13)
 
         $("#serialBaud").val(9600);
