Fix the "What is Pixel Printing?" link

--- a/sample.html
+++ b/sample.html
@@ -231,7 +231,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <a href="https://qz.io/wiki/what-is-postScript-printing" target="new">What is Pixel Printing?</a>
+                        <a href="https://qz.io/wiki/2.0-pixel-printing" target="new">What is Pixel Printing?</a>
 
                         <span style="float: right;">
                             <a href="javascript:findPrinter('XPS', true);">Microsoft XPS</a> |
